# tp4_embsys

./: .gitignore  CMakeLists.txt  README.md
src/autotools/src/miniserver/: miniserver.c
